src/gateway/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
spec:
  repilicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: dasunlk/mp3-converter-gateway:latest
          ports:
            - containerPort: 8000
